--- a/server/package.json
+++ b/server/package.json
@@ -22,9 +22,12 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
-    "rxjs": "^7.5.5"
+    "rxjs": "^7.5.5",
+    "sequelize": "^6.21.2",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.6",
