--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.182",
     "bcryptjs": "^2.4.3",
     "caver-js": "^1.8.0",
@@ -23,6 +24,7 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
     "rxjs": "^7.5.5",
