--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,7 +13,18 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+        "@store/*": ["src/store/*"],
+        "@contexts/*": ["src/contexts/*"],
+        "@components/*": ["src/components/*"],
+        "@_types/*": ["src/types/*"],
+        "@utils/*": ["src/utils/*"],
+        "@hooks/*": ["src/hooks/*"],
+        "@styles/*": ["src/styles/*"],
+        "@apis/*": ["src/apis/*"],
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
