--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@reduxjs/toolkit": "^1.8.3",
+    "dayjs": "^1.11.6",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
@@ -17,6 +20,7 @@
     "react-redux": "^8.0.2"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.10.5",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
