--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.18.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^1.1.3",
     "dayjs": "^1.11.6",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "react-toastify": "^9.1.0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-flow": "^7.18.6",
+    "@babel/preset-flow": "^7.18.6",
     "@emotion/babel-plugin": "^11.10.5",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
