--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,17 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@reduxjs/toolkit": "^1.8.3",
+    "@tanstack/react-query": "^4.14.5",
     "axios": "^1.1.3",
     "dayjs": "^1.11.6",
+    "formik": "^2.2.9",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
-    "react-toastify": "^9.1.0"
+    "react-toastify": "^9.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/plugin-syntax-flow": "^7.18.6",
