--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-toastify": "^9.1.0",
     "yup": "^0.32.11"
